feat: reemplazar campo device_name por os en las solicitudes de autenticación y actualizar la lógica de generación de tokens
